fix navbar overlapping with headings

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -41,8 +41,8 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    /* prevent navbar overlap */
+    padding-top: 4rem; 
 }
 
 /* Buttons */
